# basic-arweave-gateway

./: Cargo.toml
permafacts/: Cargo.toml
permafacts/src/: lib.rs
src/: graphql.rs  main.rs
tests/: test.rs
