[package]
name = "permafacts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
thiserror = { version = "1.0" }
pretend = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
rocket = "0.4.11"
juniper = { version = "0.15.2", features = ["uuid"] }
juniper_rocket = { version = "0.5.1" }
axum = { version = "0.5", features = ["multipart"] }
tower = { version = "0.4", features = ["util"] }
